# bevy_space_game

./: Cargo.toml  LICENSE  README.md
assets/: graphics_desc.ron  star.ase  starter_graphics.ase
config/: canister_machine.ron  fire_particle_spawner.ron  player.ron  star_particle_spawner.ron
saves/: save1.ron
src/: ascii.rs  assets.rs  canisters.rs  debug.rs  gas.rs  grid.rs  main.rs  mouse.rs  pixel_perfect_selection.rs  player.rs  prelude.rs  utils.rs  world_object.rs
src/graphics/: ascii.rs  assets.rs  mod.rs  particles.rs  pixel_perfect_selection.rs  ui.rs
src/grid/: canister.rs  gas.rs  mod.rs  wall.rs
